# bicycle-shop-api

./: .gitignore  README.md  compose.yml  init-mongo.js  pyproject.toml  scope.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/api/: README.md  main.py  security.py  settings.py
backend/src/api/dependencies/: auth.py
backend/src/api/infrastructure/: client.py
backend/src/api/routers/: cart.py  parts.py  products.py  rules.py
backend/src/api/schemas/: orders.py  parts.py  products.py  rules.py  users.py
backend/src/api/tools/: Dockerfile  entrypoint.sh
backend/src/core/application/: commands.py  querys.py
backend/src/core/domain/: entities.py  events.py  repositories.py  value_objects.py
backend/src/core/infrastructure/: mongodb_base_repository.py
backend/src/modules/iam/domain/: entities.py
backend/src/modules/iam/infrastructure/: models.py  user_repository.py
backend/src/modules/orders/application/commands/: create_order.py  validate_order_item.py
backend/src/modules/orders/domain/: aggregates.py  events.py  repositories.py  value_objects.py
backend/src/modules/orders/infrastructure/: orders_repository.py
backend/src/modules/products/domain/: aggregates.py  entities.py  events.py  repositories.py  value_objects.py
backend/src/modules/products/infrastructure/: parts_repository.py  product_repository.py  rules_repository.py
backend/tests/: basic.py  conftest.py  pytest.ini
backend/tests/api/e2e/: test_cart.py  test_products.py
backend/tools/: entrypoint.sh  init-mongo.js
frontend/: Dockerfile  index.html  package.json  (+3 more)
(+74 files in other folders)
